         non-option arguments (patch #3376243) (thanks, valgrind) (Sergio
         Baldoví).
20110726 ui/gtk/gtkui.c: allow the drag and drop of files from KDE
         (Dolphin/Konqueror) (patch #3376811) (thanks, Diondeville) (Sergio
         Baldoví).
20110726 machines/Makefile.am,ui/widget/Makefile.am: fix these issues;
         machines/machines_periph.h is not packed in the tarball,
         ui/widget/options_internals.h is not removed with distclean, and
         ui/widget/options.h no longer exists (patch #3388283) (Sergio Baldoví).
20110811 compat.h,compat/unix/file.c,fuse.c,machine.c,menu.h,menu_data.dat,
         pokefinder/{Makefile.am,pokemem.[ch]},ui/fb/fbui.c,
         ui/gtk/{Makefile.am,pokemem.c},ui/sdl/sdlui.c,ui/svga/svgaui.c,
         ui/ui.h,ui/win32/win32ui.c,utils.c: add support for POK files
         (patch #3382538) (Sergio Baldoví).
20110811 peripherals/disk/disk.c: fix one more instance of transposed memset
         arguments (patch #3388285) (Sergio Baldoví).
20110904 ui/gtk/pokemem.c: fix minor issues in the GTK+ UI (part of patch
         #3399216) (Sergio Baldoví).
20110904 menu_data.dat,ui/win32/{Makefile.am,pokemem.[ch],pokemem.rc,win32ui.c},
         windres.rc: add support for .pok files in win32 UI (rest of patch
         #3399216) (Sergio Baldoví).
20110905 debugger/{debugger.c,debugger_internals.h,event.c},event.c,fuse.c,
         memory.[ch],mempool.[ch],rzx.c,snapshot.c: free up memory (mostly
         GArray) when Fuse is exiting: memory, mempool, event, debugger/event,
         rzx (part of patch #3404090) (Sergio Baldoví).
20110910 menu_data.dat: fix compilation of non GTK+ and Win32 UIs (thanks,
         pmrtvcom) (Sergio Baldoví).
20110919 ui/fb/fbui.c,ui/sdl/sdlui.c,ui/svga/svgaui.c,ui/widget/{Makefile.am,
         menu.c,pokemem.c,widget.[ch],widget_internals.h}: add Poke Memory
         feature to the widget UIs (patch #3410145) (Sergio Baldoví).